do not commit items in lib directory

--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,9 @@ publish/
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 
+# Packages installed by Bower
+wwwroot/lib/*
+
 # Microsoft Azure Build Output
 csx/
 *.build.csdef
