--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "hwcode",
   "dependencies": {
     "underscore": "~1.8.3",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "jquery-validation": "~1.15.0",
+    "jquery-validation-unobtrusive": "~3.2.6"
   },
   "homepage": "https://github.com/StevenJV/hwcode",
   "authors": [
