--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "jquery-validation": "~1.15.0",
     "jquery-validation-unobtrusive": "~3.2.6",
     "bootstrap": "~3.3.5",
-    "font-awesome":"~4.4.0"
+    "font-awesome": "~4.4.0",
+    "bootswatch": "3.3.5+2"
   },
   "homepage": "https://github.com/StevenJV/hwcode",
   "authors": [
